--- a/adminlte/blank.html
+++ b/adminlte/blank.html
@@ -20,7 +20,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+ <script src="./dist/js/pages/home.js"></script>
   <style>
     #btn_card_btn{
       color: aliceblue;
@@ -65,7 +65,7 @@
               <div class="card_content">
                 <h2 class="card_title">Sala de Informática</h2>
                 <p class="card_text">Espaço equipado para promover aprendizagem e prática de habilidades digitais.</p>
-                <button class="btn card_btn">Fazer Reserva</button>
+                <button type="submit" class="btn card_btn" onclick="irPageCalendario()">Fazer Reserva</button>
               </div>
             </div>
           </li>
@@ -75,7 +75,7 @@
               <div class="card_content">
                 <h2 class="card_title">Projeto de Vida</h2>
                 <p class="card_text">Espaço dedicado ao desenvolvimento de planos de vida e metas pessoais.</p>
-                <button class="btn card_btn">Fazer Reserva</button>
+                <button type="submit" class="btn card_btn" onclick="irPageCalendario()" >Fazer Reserva</button>
               </div>
             </div>
           </li>
@@ -85,7 +85,7 @@
               <div class="card_content">
                 <h2 class="card_title">Biologia/Química</h2>
                 <p class="card_text">Laboratórios para aulas práticas, experimentos e exploração de conceitos científicos.</p>
-                <button class="btn card_btn">Fazer Reserva</button>
+                <button type="submit" class="btn card_btn" onclick="irPageCalendario()">Fazer Reserva</button>
               </div>
             </div>
           </li>
@@ -95,7 +95,7 @@
               <div class="card_content">
                 <h2 class="card_title">Física/Matemática</h2>
                 <p class="card_text">Ambientes equipados para experimentos e demonstrações práticas de conceitos.</p>
-                <button class="btn card_btn">Fazer Reserva</button>
+                <button type="submit" class="btn card_btn" onclick="irPageCalendario()">Fazer Reserva</button>
               </div>
             </div>
           </li>
@@ -105,7 +105,7 @@
               <div class="card_content">
                 <h2 class="card_title">Linguagens</h2>
                 <p class="card_text">Salas dedicadas ao estudo de línguas, literatura e expressão artística.</p>
-                <button class="btn card_btn">Fazer Reserva</button>
+                <button type="submit" class="btn card_btn" onclick="irPageCalendario()">Fazer Reserva</button>
               </div>
             </div>
           </li>
@@ -115,7 +115,7 @@
               <div class="card_content">
                 <h2 class="card_title">Auditório</h2>
                 <p class="card_text">Espaço amplo para apresentações, palestras e eventos educacionais.</p>
-                <button class="btn card_btn">Fazer Reserva</button>
+                <button type="submit" class="btn card_btn" onclick="irPageCalendario()">Fazer Reserva</button>
               </div>
             </div>
           </li>
@@ -125,7 +125,7 @@
               <div class="card_content">
                 <h2 class="card_title">Computadores Móveis</h2>
                 <p class="card_text">Dispositivos tecnológicos para mobilidade e acesso flexível à informação.</p>
-                <button class="btn card_btn">Fazer Reserva</button>
+                <button type="submit" class="btn card_btn" onclick="irPageCalendario()">Fazer Reserva</button>
               </div>
             </div>
           </li>
