--- a/adminlte/validar.html
+++ b/adminlte/validar.html
@@ -29,11 +29,17 @@
             <input type="text" class="form-control" placeholder="Codigo de validação" style="color: aliceblue" required maxlength="6">
             <div class="input-group-append">
               <div class="input-group-text">
-                <span class="fas fa-qrcode"></span>
+            <br>
+                
               </div>
             </div>
           </div>
       </div>
+      <center>
+      <div class="col-4">
+        <a class="btn btn-primary btn-block" href="javascript:void(0)" onclick="entrarr()">Solicitar</a>
+      </div>
+      </center>
       <!-- /.form-box -->
     </div><!-- /.card -->
     
@@ -49,6 +55,7 @@
   <script src="./plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- AdminLTE App -->
   <script src="./dist/js/adminlte.min.js"></script>
+  <script src="./dist/js/pages/pularLogin.js"></script>
 </body>
 
 </html>
